--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "linketeer",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/index.js"
+    "accept": "node src/accept-invitations.js",
+    "add": "node src/add-software-engineers.js"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
